# vychi

./: .gitignore  README.md
.github/workflows/: main.yml
vychi1/: dune-project  vychi1.opam
vychi1/_build/: .db  .digest-db  log
vychi1/_build/.sandbox/ec2a8791809f73e2ae5e641a1e35093f/default/lib/: vychi1.ml
vychi1/_build/default/: vychi1.dune-package  vychi1.install
vychi1/_build/default/.dune/: configurator  configurator.v2
vychi1/_build/default/.ppx/bfcab61e6a21ecf6d2f80029fc1ef484/: dune__exe___ppx.cmx
vychi1/_build/default/lib/: vychi1.cma  vychi1.cmxa  vychi1.cmxs  vychi1.pp.ml
vychi1/_build/default/lib/.merlin-conf/: lib-vychi1
vychi1/_build/default/lib/.vychi1.inline-tests/.vychi1.inline-tests.eobjs/byte/: dune__exe__Inline_test_runner_vychi1.cmi  dune__exe__Inline_test_runner_vychi1.cmo  dune__exe__Inline_test_runner_vychi1.cmt
vychi1/_build/default/lib/.vychi1.inline-tests/.vychi1.inline-tests.eobjs/native/: dune__exe__Inline_test_runner_vychi1.cmx
vychi1/_build/default/lib/.vychi1.objs/byte/: vychi1.cmi  vychi1.cmo  vychi1.cmt
vychi1/_build/default/lib/.vychi1.objs/native/: vychi1.cmx
vychi1/_build/install/default/lib/vychi1/: META  dune-package  opam
vychi1/lib/: dune  vychi1.ml
vychi1/src/: dune  main.ipynb  main.ml  main.t  root_eval.ml  tests.ml
vychi2/: dune-project  vychi2.opam
vychi2/src/: dune  interpolation.ml  main.ml
vychi3/: dune-project  vychi3.opam
vychi3/src/: diff_cli.ml  dune  inter_cli.ml  inv_interpolation.ml  main.ml  num_differentiation.ml  root_eval.ml
vychi4/: dune-project
vychi4/src/: cli4_1.ml  cli4_2.ml  cli4_3.ml  dune  quadrature_formulas.ml
