(env
 (dev
  (flags
   (:standard -w -32-3))))

(library
 (name root_eval)
 (libraries base)
 (modules root_eval))

(library
 (name tests)
 (modules tests)
 (libraries base root_eval)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(executable
 (name main)
 (public_name vychi1)
 (modules main)
 (libraries root_eval base))

(cram
 (deps main.exe))
