(env
 (dev
  (flags
   (:standard -w -3-32))))

(executable
 (name main)
 (public_name vychi3)
 (modules main)
 (libraries core core_unix.command_unix vychi3lib))

(library
 (name vychi3lib)
 (modules inv_interpolation num_differentiation root_eval)
 (libraries core core_unix)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_deriving.show)))
