(env
 (dev
  (flags
   (:standard -w -3-32))))

(executable
 (name inter_cli)
 (public_name vychi3_inter_cli)
 (modules inter_cli)
 (libraries core core_unix.command_unix vychi3lib))

(executable
 (name diff_cli)
 (public_name vychi3_diff_cli)
 (modules diff_cli)
 (libraries core core_unix.command_unix vychi3lib))

(library
 (name vychi3lib)
 (modules inv_interpolation num_differentiation root_eval)
 (libraries core core_unix)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_deriving.show)))
